@@ -39,7 +39,7 @@
 static	char sccsid[] = "@(#)channel.c	2.58 2/18/94 (C) 1990 University of Oulu, Computing\
  Center and Jarkko Oikarinen";
 
-static char *rcs_version="$Id: channel.c,v 1.79 1999/05/15 14:40:29 db Exp $";
+static char *rcs_version="$Id: channel.c,v 1.80 1999/05/15 15:03:12 db Exp $";
 #endif
 
 #include "struct.h"
@@ -3837,6 +3837,7 @@ int	m_names( aClient *cptr,
   Reg	aChannel *chptr;
   Reg	aClient *c2ptr;
   Reg	Link	*lp;
+  aChannel *ch2ptr = NULL;
   int	idx, flag = 0, len, mlen;
   char	*s, *para = parc > 1 ? parv[1] : NULL;
   int comma_count=0;
@@ -3896,89 +3897,132 @@ int	m_names( aClient *cptr,
       if (s)
 	*s = '\0';
       clean_channelname((unsigned char *)para);
-      chptr = find_channel(para, (aChannel *)NULL);
-    }
-  else
-    {
-      sendto_one(sptr, err_str(ERR_NOSUCHCHANNEL), me.name, parv[0],
-		 "NAMES");
-      return(1);
+      ch2ptr = find_channel(para, (aChannel *)NULL);
     }
 
-  /* If no channel found, report it and return */
-  if (!chptr)
-    {
-      sendto_one(sptr, err_str(ERR_NOSUCHCHANNEL), me.name, parv[0],
-		 para);
-      return 1;
-    }
+  *buf = '\0';
+  
+  /* 
+   *
+   * First, do all visible channels (public and the one user self is)
+   */
 
-  /* Just do the channel name given */
-  if (!ShowChannel(sptr, chptr))
+  for (chptr = channel; chptr; chptr = chptr->nextch)
     {
-      /* -- users on these are not listed, and sptr is not on the channel */
+      if ((chptr != ch2ptr) && !BadPtr(para))
+	continue; /* -- wanted a specific channel */
+      if (!MyConnect(sptr) && BadPtr(para))
+	continue;
+      if (!ShowChannel(sptr, chptr))
+	continue; /* -- users on this are not listed */
+      
+      /* Find users on same channel (defined by chptr) */
+
+      (void)strcpy(buf, "* ");
+      len = strlen(chptr->chname);
+      (void)strcpy(buf + 2, chptr->chname);
+      (void)strcpy(buf + 2 + len, " :");
+
+      if (PubChannel(chptr))
+	*buf = '=';
+      else if (SecretChannel(chptr))
+	*buf = '@';
+      idx = len + 4;
+      flag = 1;
+      for (lp = chptr->members; lp; lp = lp->next)
+	{
+	  c2ptr = lp->value.cptr;
+	  if (IsInvisible(c2ptr) && !IsMember(sptr,chptr))
+	    continue;
+	  if (lp->flags & CHFL_CHANOP)
+	    {
+	      (void)strcat(buf, "@");
+	      idx++;
+	    }
+	  else if (lp->flags & CHFL_VOICE)
+	    {
+	      (void)strcat(buf, "+");
+	      idx++;
+	    }
+	  (void)strncat(buf, c2ptr->name, NICKLEN);
+	  idx += strlen(c2ptr->name) + 1;
+	  flag = 1;
+	  (void)strcat(buf," ");
+	  if (mlen + idx + NICKLEN > BUFSIZE - 3)
+	    {
+	      sendto_one(sptr, rpl_str(RPL_NAMREPLY),
+			 me.name, parv[0], buf);
+	      (void)strncpy(buf, "* ", 3);
+	      (void)strncpy(buf+2, chptr->chname, len + 1);
+	      (void)strcat(buf, " :");
+	      if (PubChannel(chptr))
+		*buf = '=';
+	      else if (SecretChannel(chptr))
+		*buf = '@';
+	      idx = len + 4;
+	      flag = 0;
+	    }
+	}
+      if (flag)
+	sendto_one(sptr, rpl_str(RPL_NAMREPLY),
+		   me.name, parv[0], buf);
+    }
+  if (!BadPtr(para))
+    {
       sendto_one(sptr, rpl_str(RPL_ENDOFNAMES), me.name, parv[0],
 		 para);
       return(1);
     }
 
-  /* Find users on same channel (defined by chptr) */
-  buf[0] = '*';
-  buf[1] = ' ';
-  buf[2] = '\0';
-  len = strlen(chptr->chname);
-  (void)strcpy(buf + 2, chptr->chname);
-  (void)strcpy(buf + 2 + len, " :");
+  /* Second, do all non-public, non-secret channels in one big sweep */
 
-  if (PubChannel(chptr))
-    *buf = '=';
-  else if (SecretChannel(chptr))
-    *buf = '@';
-  idx = len + 4;
-
-  for (lp = chptr->members; lp; lp = lp->next)
+  (void)strncpy(buf, "* * :", 6);
+  idx = 5;
+  flag = 0;
+  for (c2ptr = client; c2ptr; c2ptr = c2ptr->next)
     {
-      c2ptr = lp->value.cptr;
-      if (IsInvisible(c2ptr) && !IsMember(sptr,chptr))
+      aChannel *ch3ptr;
+      int	showflag = 0, secret = 0;
+
+      if (!IsPerson(c2ptr) || IsInvisible(c2ptr))
 	continue;
-      if (lp->flags & CHFL_CHANOP)
+      lp = c2ptr->user->channel;
+      /*
+       * dont show a client if they are on a secret channel or
+       * they are on a channel sptr is on since they have already
+       * been show earlier. -avalon
+       */
+      while (lp)
 	{
-	  (void)strcat(buf, "@");
-	  idx++;
+	  ch3ptr = lp->value.chptr;
+	  if (PubChannel(ch3ptr) || IsMember(sptr, ch3ptr))
+	    showflag = 1;
+	  if (SecretChannel(ch3ptr))
+	    secret = 1;
+	  lp = lp->next;
 	}
-      else if (lp->flags & CHFL_VOICE)
-	{
-	  (void)strcat(buf, "+");
-	  idx++;
-	}
+      if (showflag) /* have we already shown them ? */
+	continue;
+      if (secret) /* on any secret channels ? */
+	continue;
       (void)strncat(buf, c2ptr->name, NICKLEN);
       idx += strlen(c2ptr->name) + 1;
-      flag = 1;
       (void)strcat(buf," ");
+      flag = 1;
       if (mlen + idx + NICKLEN > BUFSIZE - 3)
 	{
 	  sendto_one(sptr, rpl_str(RPL_NAMREPLY),
 		     me.name, parv[0], buf);
-	  buf[0] = '*';
-	  buf[1] = ' ';
-	  buf[2] = '\0';
-	  (void)strncpy(buf+2, chptr->chname, len + 1);
-	  (void)strcat(buf, " :");
-	  if (PubChannel(chptr))
-	    *buf = '=';
-	  else if (SecretChannel(chptr))
-	    *buf = '@';
-	  idx = len + 4;
+	  (void)strncpy(buf, "* * :", 6);
+	  idx = 5;
 	  flag = 0;
 	}
     }
 
   if (flag)
-    sendto_one(sptr, rpl_str(RPL_NAMREPLY),
-	       me.name, parv[0], buf);
+    sendto_one(sptr, rpl_str(RPL_NAMREPLY), me.name, parv[0], buf);
 
-  sendto_one(sptr, rpl_str(RPL_ENDOFNAMES), me.name, parv[0],
-	     para);
+  sendto_one(sptr, rpl_str(RPL_ENDOFNAMES), me.name, parv[0], "*");
   return(1);
 }
 
